--- a/CSS/variables.css
+++ b/CSS/variables.css
@@ -17,4 +17,6 @@
     --dark-lines-color: #000000;
     --dark-body-text: #EDEDED;
     --dark-heart-color: #DC143C;
+    /* --bg-body:var(--dark-bg_default);
+    --body-text: var(--dark-body-text) */
 }
